# routes/visit.js
@@ -4,9 +4,10 @@ const validator = require("express-joi-validation").createValidator({});
 const router = express.Router();
 const authentication = require("../middlewares/jwtToken");
 const visitController = require("../controllers/visitController");
-const {addVisit,visitSummary,id,filters,verifyOtp,sendOtp,getPendingVisitAnalytics, getAllVisitAlert} = require("../validation/visit.js");
+const {addVisit,visitSummary,id,filters,verifyOtp,sendOtp,getPendingVisitAnalytics, getAllVisitAlert, visitComment} = require("../validation/visit.js");
 router.post("/addVisit",authentication,validator.body(addVisit),visitController.addVisit);
 router.put("/visitSummary",authentication,validator.body(visitSummary),visitController.visitSummary);
+router.put("/addVisitComment",authentication, validator.body(visitComment),visitController.visitComment);
 router.post("/verifyOtp", validator.body(verifyOtp), visitController.verifyOtp);
 router.post("/resendOtp", validator.body(sendOtp), visitController.resendOtp);
 router.delete("/deleteVisit",authentication,validator.query(id),visitController.deleteVisit);
